| Bug #40134 | Wrong result when 'not exists' optimization and join buffer are used together | ||
|---|---|---|---|
| Submitted: | 18 Oct 2008 21:29 | Modified: | 22 Nov 2010 1:16 |
| Reporter: | Igor Babaev | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Optimizer | Severity: | S3 (Non-critical) |
| Version: | 6.0-BKA | OS: | Any |
| Assigned to: | Igor Babaev | CPU Architecture: | Any |
[18 Oct 2008 21:29]
Igor Babaev
[18 Oct 2008 21:34]
Igor Babaev
The problem can be observed only with the BKA code.
[19 Oct 2008 3:05]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/56536 2658 Igor Babaev 2008-10-18 Fixed bug #40134. After a match for the on expression of an outer join has been found the pushdown condition attached to the inner tables must be re-evaluated as they contain conditional expressions dependent on the value of the flag 'found' that is set on the 'match found' event. By mistake when a join buffer was used to join an inner table of an outer join and 'not exist' optimization was applied to the join operation no re-evaluation of the pushdown condition attached to the table was performed.
[14 Dec 2008 11:07]
Bugs System
Pushed into 6.0.8-alpha (revid:igor@mysql.com-20081019030924-32nvxaghaez00rlq) (version source revid:sergefp@mysql.com-20081016151624-70chzf0ilmb10a6s) (pib:5)
[14 Jan 2009 0:36]
Paul DuBois
Correction: This is pushed into 6.0.9.
[14 Jan 2009 0:49]
Paul DuBois
Noted in 6.0.9 changelog. When the optimizer joined an inner table of an outer join using both "not exists" optimization and a join buffer, an incorrect result set could be returned.
[16 Aug 2010 6:32]
Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20100816062819-bluwgdq8q4xysmlg) (version source revid:alik@sun.com-20100816062612-enatdwnv809iw3s9) (pib:20)
[13 Nov 2010 16:18]
Bugs System
Pushed into mysql-trunk 5.6.99-m5 (revid:alexander.nozdrin@oracle.com-20101113155825-czmva9kg4n31anmu) (version source revid:vasil.dimov@oracle.com-20100629074804-359l9m9gniauxr94) (merge vers: 5.6.99-m4) (pib:21)
[22 Nov 2010 1:16]
Paul DuBois
Noted in 5.6.1 changelog.
[23 Nov 2010 2:29]
Paul DuBois
Correction: No 5.6.1 changelog entry. Bug does not appear in any released 5.6.x version.
