Fixed bug #40134. After a match for the on expression of an outer join has been found the pushdown condition attached to the inner tables must be re-evaluated as they contain conditional expressions dependent on the value of the flag 'found' that is set on the 'match found' event. By mistake when a join buffer was used to join an inner table of an outer join and 'not exist' optimization was applied to the join operation no re-evaluation of the pushdown condition attached to the table was performed.

Original revid:igor@mysql.com-20081019030924-32nvxaghaez00rlq